--- a/day 4/myjourney.html
+++ b/day 4/myjourney.html
@@ -39,7 +39,7 @@
     <body bgcolor="66CDAA">
         
         <h1 style = "color:black;text-align: center;">My MSIT JOURNEY EXPERIENCE</h1>
-        <img src="https://msitprogram.net/images/msitadv.jpg" height = "500">
+        <img src="https://msitprogram.net/images/msitadv.jpg" ALIGN=”left”  height = "250">
         <h2>ABOUT ME</h2>
         <p>I'm L.Venu Gopal Rao.I live in hyderabad.Finished my btech with 65%.I joined MSIT course in IIIT HYD.My hobbies are playing basketball and chess</p>
         <h3>What is MSIT and how did I know this?</h3>
