--- a/project0/Projects.html
+++ b/project0/Projects.html
@@ -4,18 +4,18 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body style="font-size: large;">
-    <ul id="menu">
-        <li><a class="active" href=https://www.google.com/>Home</a></li>
+        <ul id="menu">
+            <li><a class="active" href=https://lvgr1947.github.io/web-pro/project0/index.html>Home</a></li>
         </br>
-        <li><a class="active" href=https://www.google.com/>Projects</a></li>
-        </br>
-        <li><a class="active" href=https://www.google.com/>Education</a></li>
-        </br>
-        <li><a class="active" href=https://www.google.com/>Contact Me</a></li>
+            <li><a class="active" href=https://lvgr1947.github.io/web-pro/project0/Projects.html>Projects</a></li>
+    </br>
+            <li><a class="active" href=https://lvgr1947.github.io/web-pro/project0/Education.html>Education</a></li>
+</br>
+            <li><a class="active" href=https://lvgr1947.github.io/web-pro/project0/contact.html>Contact Me</a></li>
         </br>
     </ul> 
     <h1 ><b>L.Venu Gopal Rao</b></h1>
-    <p><img style="float: right; " src="C:\Users\Venu Gopal rao\Downloads\rsz_1img_20180825_184305.jpg" width="200" height="200" alig></p>    
+    <p><img style="float: right; " src="https://lvgr1947.github.io/web-pro/project0/srsz_1img_20180825_184305.jpg" width="200" height="200" alig></p>    
     <b style=" font-size: larger;color: blue;"> Project </b></br>
 
 </br><b style=" font-size: larger;">Automatic irritation using arduino</b>
