--- a/project0/contact.html
+++ b/project0/contact.html
@@ -4,14 +4,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<ul id="menu"><b>
-    <li><a class="active" href=https://www.google.com>Home</a></li>
+    <ul id="menu">
+        <li><a class="active" href=https://lvgr1947.github.io/web-pro/project0/index.html>Home</a></li>
+    </br>
+        <li><a class="active" href=https://lvgr1947.github.io/web-pro/project0/Projects.html>Projects</a></li>
 </br>
-    <li><a class="active" href=https://www.google.com>Resume</a></li>
+        <li><a class="active" href=https://lvgr1947.github.io/web-pro/project0/Education.html>Education</a></li>
 </br>
-    <li><a class="active" href=https://www.google.com>Projects</a></li>
-</br>
-    <li><a class="active" href=https://www.google.com>Contact Me</a></li>
+        <li><a class="active" href=https://lvgr1947.github.io/web-pro/project0/contact.html>Contact Me</a></li>
 </b>
 </ul> 
 </br>
@@ -33,8 +33,7 @@
       <p>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-6">LinkedIn: <a href = www.linkedin.com/in/L.venugopalrao>www.linkedin.com/in/aiswaryachundury</a></div>
-          <div class="col-sm-6">Facebook: L.Venu gopal rao</div>
+          <div class="col-sm-6">LinkedIn: <a href = www.linkedin.com/in/L.venugopalrao>www.linkedin.com/in/L.venugopalrao</a></div>
         </div>
       </div>
   </p>
