--- a/project0/index.html
+++ b/project0/index.html
@@ -6,13 +6,13 @@
     </head>
     <body style="font-size: large;">
         <ul id="menu">
-            <li><a class="active" href=https://www.google.com/>Home</a></li>
+            <li><a class="active" href=https://lvgr1947.github.io/web-pro/project0/index.html>Home</a></li>
         </br>
-            <li><a class="active" href=https://www.google.com/>Projects</a></li>
+            <li><a class="active" href=https://lvgr1947.github.io/web-pro/project0/Projects.html>Projects</a></li>
     </br>
-            <li><a class="active" href=https://www.google.com/>Education</a></li>
+            <li><a class="active" href=https://lvgr1947.github.io/web-pro/project0/Education.html>Education</a></li>
 </br>
-            <li><a class="active" href=https://www.google.com/>Contact Me</a></li>
+            <li><a class="active" href=https://lvgr1947.github.io/web-pro/project0/contact.html>Contact Me</a></li>
 </br>
         </ul> 
         <h1 ><b>L.Venu Gopal Rao</b></h1>
@@ -20,7 +20,7 @@
         Welcome to my page!!!
     </strong>
 </h2>
-    <p><img src="C:\Users\Venu Gopal rao\Downloads\rsz_1img_20180825_184305.jpg" width="200" height="200" style="text-align: right;"></p>
+    <p><img src="https://lvgr1947.github.io/web-pro/project0/srsz_1img_20180825_184305.jpg" width="200" height="200" style="text-align: right;"></p>
     <!-- <div style="text-align: left;" >
         If you want to know about me, just go through this website
     </div> -->
