--- a/project0/contact.html
+++ b/project0/contact.html
@@ -33,7 +33,7 @@
       <p>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-6">LinkedIn: <a href = www.linkedin.com/in/L.venugopalrao>www.linkedin.com/in/L.venugopalrao</a></div>
+          <div class="col-sm-6">LinkedIn: <a href = linkedin.com/in/venu-gopal-rao-ab1509173>www.linkedin.com/in/L.venugopalrao</a></div>
         </div>
       </div>
   </p>
